--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -6,8 +6,8 @@
     android:layout_marginBottom="10dp">
 
     <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
         android:layout_centerVertical="true"
@@ -21,10 +21,30 @@
         android:text="User Name"
         android:layout_margin="5dp"
         android:layout_toRightOf="@+id/image_id"
-        android:layout_toLeftOf="@+id/call_button"
         android:layout_centerVertical="true"
         android:textSize="20sp"
         android:id="@+id/text_id"/>
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left|bottom"
+        android:text="status"
+        android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/image_id"
+        android:layout_alignBottom="@+id/image_id"
+        android:layout_marginBottom="2dp"
+        android:textSize="12sp"
+        android:id="@+id/message"/>
+
+    <ImageView
+        android:id="@+id/right_arrow"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="5dp"
+        android:tint="@color/room_item"
+        android:layout_centerVertical="true"
+        android:src="@drawable/right_arrow"/>
 </RelativeLayout>
