--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -13,13 +13,30 @@
         android:layout_height="wrap_content"
         android:background="@color/primary"
         android:layout_marginBottom="2dp">
-        <Button
-            android:id="@+id/roomsButton"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rooms_button"
-            android:textColor="@color/white"
-            android:background="@color/primary"/>
+            android:layout_margin="5dp"
+            android:id="@+id/rooms_back_layout">
+
+            <ImageView
+                android:id="@+id/back_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/roomsButton"
+                android:layout_alignBottom="@+id/roomsButton"
+                android:src="@drawable/ic_arrow_back_white_24dp"/>
+            <TextView
+                android:id="@+id/roomsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rooms_button"
+                android:gravity="left|center_vertical"
+                android:layout_toRightOf="@+id/back_arrow"
+                android:textColor="@color/white"
+                android:background="@color/primary"/>
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/roomName"
@@ -28,8 +45,8 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:textSize="16sp"
-            android:layout_alignTop="@+id/roomsButton"
-            android:layout_alignBottom="@+id/roomsButton"
+            android:layout_alignTop="@+id/rooms_back_layout"
+            android:layout_alignBottom="@+id/rooms_back_layout"
             android:textColor="@color/white"
             android:text="Room Name"/>
 
