--- a/app/src/main/res/menu/room_drawer_menu.xml
+++ b/app/src/main/res/menu/room_drawer_menu.xml
@@ -18,16 +18,30 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!--
+          account list placeholder
+          all items in this group MUST have orderInCategory="2" set
+          all accounts are dynamically added with orderInCategory="1" set
+        -->
+    <group android:id="@+id/drawer_menu_accounts">
+        <item
+            android:orderInCategory="2"
+            android:id="@+id/drawer_menu_account_add"
+            android:icon="@drawable/ic_account_plus"
+            android:title="@string/prefs_add_account"/>
+        <item
+            android:orderInCategory="2"
+            android:id="@+id/drawer_menu_account_manage"
+            android:icon="@drawable/ic_settings"
+            android:title="@string/drawer_manage_accounts"/>
+    </group>
+
+    <!--
       standard menu
       all items in this group MUST have orderInCategory="0" set
     -->
     <group android:id="@+id/drawer_menu_standard" android:checkableBehavior="none">
 
-        <item
-            android:orderInCategory="3"
-            android:id="@+id/action_accounts"
-            android:title="@string/action_accounts"
-            android:icon="@drawable/ic_account_circle_white_18dp"/>
+
         <item
             android:orderInCategory="3"
             android:id="@+id/action_settings"
