--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -53,7 +53,7 @@
     </string-array>
 
     <string-array name="roomListContextMenu">
-        <item>Remove favorite</item>
+        <item>Remove room</item>
     </string-array>
 
 </resources>
