--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,9 @@
 
   <style name="RoomActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
+    <item name="android:windowNoTitle">true</item>
     <item name="android:windowActionBar">false</item>
     <item name="android:windowFullscreen">true</item>
-    <item name="android:windowNoTitle">true</item>
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
@@ -37,11 +37,31 @@
     <item name="android:ellipsize">end</item>
   </style>
 
+  <style name="CallActionButtonStyle">
+    <item name="fab_size">mini</item>
+    <item name="fab_showAnimation">@anim/jump_from_down</item>
+    <item name="fab_hideAnimation">@anim/jump_to_down</item>
+    <item name="fab_shadowColor">#00000000</item>
+    <item name="fab_colorNormal">#55ffffff</item>
+    <item name="fab_colorPressed">#55dddddd</item>
+    <item name="fab_colorRipple">#55eeeeee</item>
+  </style>
+
+  <style name="EndCallButtonStyle">
+    <item name="fab_size">normal</item>
+    <item name="fab_showAnimation">@anim/jump_from_down</item>
+    <item name="fab_hideAnimation">@anim/jump_to_down</item>
+    <item name="fab_shadowColor">#00000000</item>
+    <item name="fab_colorNormal">#ff3300</item>
+    <item name="fab_colorPressed">#ff6600</item>
+    <item name="fab_colorRipple">#ff2200</item>
+  </style>
+
   <style name="MenuButtonsStyle">
     <item name="fab_size">normal</item>
     <item name="fab_showAnimation">@anim/jump_from_down</item>
     <item name="fab_hideAnimation">@anim/jump_to_down</item>
-    <item name="fab_shadowColor">#ccc</item>
+    <item name="fab_shadowColor">#00000000</item>
     <item name="fab_colorNormal">#1565C0</item>
     <item name="fab_colorPressed">#2272CD</item>
     <item name="fab_colorRipple">#62B2FF</item>
