--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -46,6 +46,7 @@
             android:text="@string/disconnected"/>
 
         <ProgressBar
+            android:id="@+id/connecting_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
