--- a/app/src/main/res/layout/rooms_list.xml
+++ b/app/src/main/res/layout/rooms_list.xml
@@ -1,7 +1,6 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/room_item">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="48dp"
@@ -49,6 +48,7 @@
         android:layout_height="24dp"
         android:layout_alignParentRight="true"
         android:layout_margin="5dp"
+        android:tint="#333"
         android:layout_centerVertical="true"
         android:src="@drawable/right_arrow"/>
 
