--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -7,11 +7,11 @@
 
     <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/remote_video_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
             <org.webrtc.SurfaceViewRenderer
                 android:id="@+id/remote_video_view"
                 android:layout_width="wrap_content"
@@ -35,8 +35,8 @@
 
     <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/remote_video_layout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -63,8 +63,8 @@
 
     <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/remote_video_layout3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -91,8 +91,8 @@
 
     <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/remote_video_layout4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -119,8 +119,8 @@
 
     <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/local_video_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <org.webrtc.SurfaceViewRenderer
             android:id="@+id/local_video_view"
             android:layout_width="wrap_content"
