--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -36,7 +36,7 @@
         <RelativeLayout
             android:id="@+id/connected_state_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="64dp"
             android:layout_below="@+id/appbar"
             android:background="@color/room_item">
             <TextView
@@ -46,6 +46,7 @@
                 android:layout_margin="8dp"
                 android:lines="1"
                 android:maxLines="1"
+                android:layout_centerVertical="true"
                 android:textColor="@android:color/holo_red_dark"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/disconnected"/>
